# trading-assistant

./: .env.example  .gitignore  README.md  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/accounts/: __init__.py  registry.py
backend/app/agents/: __init__.py  prompt_builder.py  registry.py  workspace.py
backend/app/audit/: __init__.py  store.py
backend/app/backtesting/: __init__.py  simulator.py
backend/app/config/: loader.py
backend/app/connectors/: __init__.py  metaapi_mcp.py  metaapi_transport.py
backend/app/devices/: __init__.py  registry.py
backend/app/feeds/: __init__.py  pipeline.py  service.py  types.py
backend/app/gateway/: __init__.py  models.py  ws_handler.py
backend/app/hooks/: __init__.py  runtime.py
backend/app/marketplace/: __init__.py  copytrade.py
backend/app/memory/: __init__.py  index.py
backend/app/plugins/: __init__.py  registry.py
backend/app/protocol/: __init__.py  frames.py
backend/app/queues/: __init__.py  agent_queue.py  snapshot_store.py
backend/app/risk/: __init__.py  control.py  engine.py
backend/app/trades/: __init__.py  service.py
backend/plugins/metaapi_mcp/: plugin.json
backend/plugins/sqlite_fts/: plugin.json
backend/tests/integration/: test_metaapi_live.py
backend/tests/unit/: test_health.py
backend/tests/unit/accounts/: test_account_registry.py
backend/tests/unit/agents/: test_agent_registry.py  test_workspace_and_prompt.py
backend/tests/unit/audit/: test_store.py
backend/tests/unit/backtesting/: test_simulator.py
docs/: README.md
(+42 files in other folders)
